When seperating a grease pencil stroke to its own object it will lose all vertex groups #93728

Closed
opened 2021-12-06 00:48:06 +01:00 by Jan-Willem van Dronkelaar · 11 comments

System Information
Operating system: Windows-10-10.0.19042-SP0 64 Bits
Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12

Blender Version
Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: f1cca30557
Caused by 3b6ee8cee7

Short description of error
When separating a grease pencil stroke to its own grease pencil object it will lose all vertex groups.

Exact steps for others to reproduce the error
a) create a new grease pencil object with the default stroke
b) create some vertex groups (optionally assign some weights)
c) select the stroke in edit mode and press P > choose "selected strokes"
d) when you go and edit the new GP object all the vertex groups on the stroke will have been deleted

Expected behavior:
The stroke will keep its vertex groups once its separated to its own grease pencil object.

**System Information** Operating system: Windows-10-10.0.19042-SP0 64 Bits Graphics card: NVIDIA GeForce RTX 3060/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 472.12 **Blender Version** Broken: version: 3.0.0, branch: master, commit date: 2021-12-02 18:35, hash: `f1cca30557` Caused by 3b6ee8cee7 **Short description of error** When separating a grease pencil stroke to its own grease pencil object it will lose all vertex groups. **Exact steps for others to reproduce the error** a) create a new grease pencil object with the default stroke b) create some vertex groups (optionally assign some weights) c) select the stroke in edit mode and press P > choose "selected strokes" d) when you go and edit the new GP object all the vertex groups on the stroke will have been deleted Expected behavior: The stroke will keep its vertex groups once its separated to its own grease pencil object.

Added subscriber: @jwvdronkelaar

Added subscriber: @jwvdronkelaar
Member

Added subscriber: @PratikPB2123

Added subscriber: @PratikPB2123
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Member

Hi, thanks for the report. I can confirm on master (Looks like a regression because I can not repro on 2.93)

Will bisect

Hi, thanks for the report. I can confirm on master (Looks like a regression because I can not repro on 2.93) Will bisect
Member

Added subscriber: @HooglyBoogly

Added subscriber: @HooglyBoogly
Member

Introduced in 3b6ee8cee7

cc @HooglyBoogly

Introduced in 3b6ee8cee7 cc @HooglyBoogly
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Philipp Oeser self-assigned this 2021-12-08 09:14:25 +01:00
Member

Will check.

Will check.

This issue was referenced by 0b7dbff04a

This issue was referenced by 0b7dbff04a4a2e4b2ce715c63c46294e3c732026

This issue was referenced by 72b39d3f92

This issue was referenced by 72b39d3f920072b6a568c63c26e35d444cfcb6f3
Member

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Code Documentation
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
FBX
Interest
Freestyle
Interest
Geometry Nodes
Interest
glTF
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Asset System
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#93728
No description provided.